--- a/Werkstuk2_Yolan_Cristoria/Info.plist
+++ b/Werkstuk2_Yolan_Cristoria/Info.plist
@@ -20,6 +20,20 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>http://opendatastore.brussels/</key>
+			<string></string>
+		</dict>
+	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Location acces ok?</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location acces ok?</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
